syntax = "proto3";

package Reaction;

enum ReactionType {
  REACTION_LIKE = 0;
  REACTION_UNLIKE = 1;
  REACTION_DISLIKE = 2;
  REACTION_UNDISLIKE = 3;
}


message VideoReactionDto {
  string userId = 1;
  string videoId = 2;
  ReactionType reaction = 3;
}

message ReactionResponse {
  string response = 1;
}

service ReactionService {
  rpc reactToVideo(VideoReactionDto) returns (ReactionResponse) {}
}